test/testdata/classes/methods/static/unused_parameter_error.lox
class Foo {
  // error: z has been declared but is never used
  static add(x, y, z) {
    print x + y;
  }
}
